# lane

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.full.yml  docker-compose.prebuilt.yml  docker-compose.yml  nginx.conf
docs/: api.md  approvals.md  auth.md  connections.md  endpoints.md  graph.md  index.md  mcp.md  origin.md  permissions.md  pii.md  query-engine.md  realtime.md  search.md  setup.md  storage.md  teams.md  ui.md  workspace.md
src/: config.rs  main.rs
src/api/: approvals.rs  connections.rs  endpoints.rs  errors.rs  graph.rs  handlers.rs  history.rs  import.rs  mod.rs  monitor.rs  realtime.rs  rest_api.rs  search.rs  storage.rs  workspace.rs
src/auth/: access_control.rs  admin.rs  email_code.rs  mod.rs  session.rs
src/db/: clickhouse_backend.rs  duckdb_backend.rs  metadata.rs  mod.rs  mssql.rs  postgres.rs
src/export/: csv.rs  mod.rs  xlsx.rs
src/graph/: mod.rs
src/import/: mod.rs  parser.rs  sql_gen.rs  type_infer.rs
src/mcp/: mod.rs  tools.rs
src/pii/: mod.rs
src/query/: mod.rs  pagination.rs  validation.rs
src/rest/: filters.rs  mod.rs  openapi.rs  sql_builder.rs  types.rs
src/search/: db.rs  indexer.rs
src/storage/: mod.rs
tests/: admin.rs  auth.rs  connections.rs  databases.rs  health.rs  permissions.rs  query.rs  rest_api.rs  tables.rs
tests/common/: mod.rs
tests/integration/: lib.sh  run.sh  test_email_code.sh  test_email_code_sad.sh  test_login_rate_limit.sh  test_permissions.sh
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
ui/e2e/: fixtures.ts  global-setup.ts
ui/e2e/helpers/: admin.ts  api-waiter.ts  auth.ts  navigation.ts  radix-select.ts
ui/e2e/specs/: admin-audit.spec.ts  admin-permissions.spec.ts  admin-tokens.spec.ts  admin-users.spec.ts  auth.spec.ts  query.spec.ts  tables.spec.ts
ui/src/: App.tsx  index.css
ui/src/__tests__/: helpers.ts  setup.ts
ui/src/__tests__/components/: ConnectionPicker.test.tsx  Login.test.tsx  ResultsTable.test.tsx
ui/src/__tests__/integration/: api.integration.test.ts
ui/src/__tests__/lib/: api.test.ts  schema-queries.test.ts  sql-gen.test.ts
ui/src/__tests__/pages/: AdminPage.test.tsx  QueryPage.test.tsx  TablesPage.test.tsx
ui/src/components/: ChartView.tsx  ColumnFilterPopover.tsx  ConnectionPicker.tsx  EditableTable.tsx  ExportButton.tsx  Layout.tsx  Login.tsx  MermaidERD.tsx  QueryHistory.tsx  RelatedObjectsDrawer.tsx  ResultsTable.tsx  ReviewChangesDialog.tsx  RlsTab.tsx  SaveToStorageDialog.tsx  SearchBar.tsx  SetupWizard.tsx  SqlEditor.tsx  TemplatePicker.tsx
ui/src/lib/: api.ts  auth.tsx  schema-cache.ts  schema-queries.ts  sql-gen.ts  templates.ts
ui/src/pages/: AdminPage.tsx  ApprovalsPage.tsx  GraphPage.tsx  HealthPage.tsx  ImportPage.tsx  MonitorPage.tsx  MyAccessPage.tsx  ObjectsPage.tsx  QueryPage.tsx  RealtimePage.tsx  StoragePage.tsx  TablesPage.tsx  WorkspacePage.tsx
